[bugfix] .bg z-index & Infobox styling in progress

--- a/style/class.css
+++ b/style/class.css
@@ -6,12 +6,17 @@
 	color: #C66; font: 16px "Arial Black";
 	float: right; position: relative; margin: 0 1px; padding: 2px 10px;
 }
-#navMain .navRef:hover { color: #FFF; text-shadow: 1px 1px 2px #999; /* Won't work on Chrome or IE; but I despise 'em anyway! */ }
+#navMain .navRef:hover { color: #FFF; text-shadow: 1px 1px 2px #999; }
 
 /* ----------- Content ----------- */
 #infoContainer .infoBox {
-	width: 100%; margin: 20px 0; color: #999; text-shadow: 1px 1px 2px #CCC;
+	width: 100%; margin: 20px 0;
+	color: rgba(96,96,96,0.5); text-shadow: 1px 1px 2px #CCC;
 	box-shadow: inset 0 5px 40px rgba(192,192,192,0.33), 0 5px 10px rgba(192,192,192,0.5);
+}
+#infoContainer .infoBox:hover {
+	color: rgba(255,255,255,0.75); background: rgba(96, 160, 192, 0.5);
+	text-shadow: 1px 1px 2px #999; box-shadow: inset 0 5px 40px rgba(64,96,128,0.5), 0 5px 10px rgba(192,192,192,0.5);
 }
 #infoContainer .infoBox .infoTitle { width: 100%; height: 40px; }
 #infoContainer .infoBox .infoTitle .nick { display: inline; float: left; padding: 5px 20px; font: 20px Verdana; }
