--- a/style/hacks.css
+++ b/style/hacks.css
@@ -2,7 +2,7 @@
 /* the hacks used to achieve some effects in hard ways */
 
 /* Layering BG-DIV to fix inherited opacity */
-.bg { top: 0px; left: 0px; opacity: 0.25; position: absolute; background: url(../img/texture.png); }
+.bg { top: 0px; left: 0px; opacity: 0.25; z-index: -1; position: absolute; background: url(../img/texture.png); }
 #navMain .navRef .bg {
 	padding: 2px 10px;
 	border-radius: 5px 5px 0 0;
